added start script to package json
Signed-off-by: JJ Asghar <awesome@ibm.com>

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/jjasghar/email-asgharlabs/issues"
   },
-  "homepage": "https://github.com/jjasghar/email-asgharlabs#readme"
+  "homepage": "https://github.com/jjasghar/email-asgharlabs#readme",
+  "scripts": {
+    "start": "node app.js"
+  }
 }
